--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 sample_html_path='data/sample.html'
+amazon_path="https://www.flipkart.com/search?q=laptop&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off"
+csv_path='data/data.csv'
