--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 sample_html_path='data/sample.html'
 flipkart_path="https://www.flipkart.com/search?q=laptop&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off"
 csv_path='data/data.csv'
+DB_USER='flip'
+DB_PASSWORD='imran123'
+DB_PORT='3306'
+DB_NAME='flipdb'
+DB_HOST='localhost'
