updated into convertion

--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 sample_html_path='data/sample.html'
 flipkart_path="https://www.flipkart.com/search?q=laptop&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off"
 csv_path='data/data.csv'
-DB_USER='flip'
-DB_PASSWORD='imran123'
+DB_USER='root'
+DB_PASSWORD='admin'
 DB_PORT='3306'
 DB_NAME='flipdb'
+TABLE_NAME=''
 DB_HOST='localhost'
+ID_COLUMN_NAME1='myid'
+ID_COLUMN_NAME2='laptop name'
+ID_COLUMN_NAME3='price'
