update with xml excel and so on

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ DB_HOST='localhost'
 ID_COLUMN_NAME1='myid'
 ID_COLUMN_NAME2='laptop name'
 ID_COLUMN_NAME3='price'
+TABLE_NAME='flipkart'
+EMPTY_RESULTSET='resultset empty'
